# titso

./: .gitignore  Cargo.toml  README.md  index.html  sw.js  titso.webmanifest
cli/: Cargo.toml
cli/src/: db.rs  input.rs  main.rs  store.rs  titso.rs  util.rs  utils.rs
core/: Cargo.toml
core/src/: common.rs  core.rs  db.rs  error.rs  kv.rs  lib.rs  packet.rs  shield.rs  util.rs
core/src/crypto/: kdf.rs  keyedhash.rs  mod.rs  rng.rs
core/src/primitive/: aead.rs  kdf.rs  keyedhash.rs  mod.rs  rng.rs  stream.rs
core/tests/: tv.rs
pkg/: titso_web.d.ts  titso_web.js  titso_web_bg.d.ts  titso_web_bg.js  titso_web_bg.wasm  titso_web_bg.wasm.d.ts
src/: common.rs  core.rs  kdf.rs  keyedhash.rs  main.rs  rng.rs
src/primitive/: aead.rs
web/: Cargo.toml  README.md
web/resources/: index.html
web/src/: common.rs  error.rs  lib.rs  op.rs  pages.rs
