[package]
name = "titso-core"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
byteorder = "1"
once_cell = "1"
arrayref = "0.3"
getrandom = "0.2"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_bytes = "0.11"
gimli-permutation = { version = "0.1", features = [ "simd" ] }
gimli-hash = "0.1.5"
seckey = { version = "0.11.1", default-features = false, features = [ "use_std" ] }

log = "0.4"
