[package]
name = "titso-core"
version = "0.2.0"
authors = ["quininer <quininer@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
cbor4ii = { version = "0.2", features = [ "serde1", "use_std" ] }
serde_bytes = "0.11"
gimli-permutation = { version = "0.2" }
gimli-hash = "0.2"
gimli-aead = "0.2"

[dev-dependencies]
anyhow = "1"
