[package]
name = "titso-web"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
titso-core = { path = "../core" }
seckey = { version = "0.11.1", default-features = false }

wasm-bindgen = "*"
wasm-bindgen-futures = "*"
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
js-sys = "*"
web-sys = { version = "0.3", features = [ "Document", "HtmlInputElement", "HtmlButtonElement", "HtmlTextAreaElement", "Storage" ] }
kvdb-web = "*"
gloo-events = "*"
