[package]
name = "titso-web"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
titso-core = { path = "../core" }
seckey = { version = "0.11.2", default-features = false }

log = "0.4"
console_log = "0.2"
getrandom = { version = "0.1", features = [ "wasm-bindgen" ] }
serde_cbor = "0.11"
serde_bytes = "0.11"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
	"Document",
	"HtmlInputElement",
	"HtmlButtonElement",
	"HtmlAnchorElement",
	"HtmlTextAreaElement",
	"CssStyleDeclaration",
	"InputEvent",
	"KeyboardEvent",
	"FileList",
	"File",
	"Url"
] }
indexed-kv = { git = "https://github.com/quininer/indexed-kv" }
gloo-events = "0.1"
